fixed off screen issues

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ html {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif; /*import a new font*/
-    
 }
 
 .navbar
@@ -96,7 +95,7 @@ html {
 
 /* mobile responsiveness */
 @media screen and (max-width: 960px)
-{
+{   
     .navbar__container
     {
         display: flex;
@@ -839,10 +838,16 @@ img.displaySlide
     color: #6A6D78;
     font-size: 1.31rem;
   }
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 960px) {
     .wrapper .carousel {
       grid-auto-columns: calc((100% / 2) - 9px);
     }
+    .wrapper i:first-child{
+        left: 24px;
+      }
+      .wrapper i:last-child{
+        right: 24px;
+      }
   }
   @media screen and (max-width: 600px) {
     .wrapper .carousel {
